--- a/config/nginx/site.conf
+++ b/config/nginx/site.conf
@@ -1,13 +1,10 @@
+client_max_body_size 0; # within http context via 'include' in nginx.conf is within http
 server
 {
     listen   80;
-
     root /var/www/web;
     index index.php;
-
-    location /uploads {
-        client_max_body_size 100M;
-    } 
+    client_max_body_size 0; # within server context
 
     location / {
         error_page 404 = @drupal;
@@ -17,9 +14,11 @@ server
         rewrite ^(.*)$ /index.php?q=$1 last;
     }
     location ~ \.php$ {
+        client_max_body_size 0; # within location context  
         fastcgi_pass   php:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        fastcgi_param  PHP_VALUE   "memory_limit = 500M; post_max_size = 400M; upload_max_filesize = 300M;";
         include        fastcgi_params;
     }
 }
